# aros_1126

./: .gitignore  CMakeLists.txt  build-android_RK3588.sh  build-linux_RK356X.sh
config/: ai_params.json  cam.json  new_test_json_eight.json  params_input.json
include/: EcoAIWrapper.h  EcoAInterface.h  data_type.h  eco_ai_cls.h  eco_ai_defs.h  eco_ai_detect.h  eco_ai_seg.h  eco_common.h  eco_distance_Interface.h  eco_pixel_distance.h  eco_task_infer.h  foot_rknn.h  inference.h  person_remove.h  postprocess.h  utils.h
include/postprocess_algorithm_h/: animal_detect_postprocess.h  animal_detect_yolov11_postprocess.h  common.h  drystain_detect_postprocess.h  freespace_postprocess.h  groundpoint_postprocess.h  indoor_det_yolov7.h  indoor_det_yolov8.h  indoor_prop_yolov8.h  infrared_detect_postprocess.h  lint_detect_postprocess.h  liquid_detect_postprocess.h  obstacle_detect_postprocess.h  people_detect_postprocess.h  pm_detect_postprocess.h  yolov5_liquid_detect_postprocess.h  yolov8_irstain_detect_postprocess.h
model/: distance_table  inner.json
model/EcoAiSweeper/: models_2522.json  models_2540.json
model/EcoAiSweeper_old/: models.json  net-en4.rknn-apk
model/model/地面材质/: net-en5.rknn-1.0.1.241121  net-en5.rknn-1.1.0.241203
src/: EcoAInterface.cc  eco_ai_cls.cc  eco_ai_detect.cc  eco_ai_seg.cc  eco_distance_Interface.cc  eco_pixel_distance.cc  eco_task_infer.cc  foot_rknn.cpp  inference.cc  postprocess.cc  utils.cc
src/postprocess_algorithm_src/: animal_detect_postprocess.cc  animal_detect_yolov11_postprocess.cc  drystain_detect_postprocess.cc  freespace_postprocess.cc  groundpoint_postprocess.cc  indoor_det_yolov7.cc  indoor_det_yolov8.cc  indoor_prop_yolov8.cc  infrared_detect_postprocess.cc  lint_detect_postprocess.cc  liquid_detect_postprocess.cc  obstacle_detect_postprocess.cc  people_detect_postprocess.cc  pm_detect_postprocess.cc  yolov5_liquid_detect_postprocess.cc  yolov8_irstain_detect_postprocess.cc
srcperson/: person_remove.cc
test/: detect.cc  detect_self.cc  infer.cc  infer_self.cc  main_rknn.cpp  main_task.cc  main_task_allcam.cc  main_task_self.cc  main_task_single.cc  seg.cc
